--- a/assets/main.css
+++ b/assets/main.css
@@ -6,3 +6,31 @@ body {
     margin-top: 30px;
     padding: 15px 0 30px;
 }
+
+.tab-content {
+    margin-top: 15px;
+}
+
+.params-list {
+    margin: -8px;
+}
+.params-list .form-group {
+    margin-bottom: 0;
+}
+.params-list .form-group .help-block {
+    margin: 0;
+}
+.params-list td {
+    border-top: none !important;
+}
+.params-list td.column-check,
+.params-list td.column-actions {
+    width: 30px;
+    vertical-align: middle !important;
+}
+.params-list td.column-key {
+    width: 30%;
+}
+.params-list tr:last-child button.close {
+    display: none;
+}
