--- a/assets/main.css
+++ b/assets/main.css
@@ -42,6 +42,20 @@ body {
 
 
 
+.nav-tabs > li > .info {
+    position: relative;
+    display: block;
+    padding: 10px 0 10px 15px;
+    font-weight: bold;
+}
+.nav-tabs > li > .info .label {
+    white-space: normal;
+    font-size: 85%;
+
+}
+
+
+
 .request-list,
 .request-list ul {
     margin-bottom: 0;
